@startuml

title __SOCIALNET's Class Diagram__\n

  namespace  {
    namespace om.example.socialnet {
      class com.example.socialnet.Controller {
      }
    }
  }
  

  namespace  {
    namespace om.example.socialnet {
      class com.example.socialnet.Main {
      }
    }
  }
  

  namespace  {
    namespace om.example.socialnet {
      class com.example.socialnet.ProfileData {
      }
    }
  }
  

  com.example.socialnet.Controller o-- com.example.socialnet.ProfileData : profileData
  com.example.socialnet.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
